# Project-Sankofa

./: README.md  pyproject.toml
src/: app.py  brute_force_login.py  models.py  routes.py  seed.py
src/instance/: artifacts.db
src/migrations/versions/: b0f6838929d3_add_photographs_column_to_artifact_model.py
src/static/css/: styles.css
src/static/js/: scripts.js
src/templates/: admin_dashboard.html  artifact.html  artifact_database.html  base.html  index.html  login.html  register.html  search_results.html
src/tests/: test_app.py
