[tool.poetry]
name = "projectsankofa"
version = "0.1.0"
description = ""
authors = ["Germuu <jeremyyamajako@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
sqlalchemy = "^2.0.38"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
